### Change code for new astropy version : https://github.com/tlittenberg/lisacattools/issues/13 (HEAD -> main)
>Fri, 13 Jan 2023 04:21:03 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Closes https://github.com/tlittenberg/lisacattools/issues/13
>Thu, 12 Jan 2023 23:48:50 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fixes https://github.com/tlittenberg/lisacattools/issues/14
>Thu, 12 Jan 2023 22:07:26 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix the python version for black and wrong flake8 URL in precommit
>Thu, 12 Jan 2023 22:01:14 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add Support for conda (origin/conda)
>Wed, 4 Aug 2021 00:12:58 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Improve code quality : use pre-commit package to configure/run the code quality
>Mon, 2 Aug 2021 01:38:46 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Use read-only mode when opening a file
>Mon, 2 Aug 2021 01:37:18 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix the log verbose
>Mon, 2 Aug 2021 01:35:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### updating MBHdemo and adding ucb sky circle example