@@ -1,0 +1,30 @@
+name: Deploy to GitHub pages
+on:
+  push:
+    branches: [ main ]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Generate static VuePress files
+      run: |
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+        make doc
+    - name: Init new repo in dist folder and commit generated files
+      run: |
+        cd doc/build/html
+        git init
+        git add -A
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m 'deploy'
+    - name: Force push to destination branch
+      uses: ad-m/github-push-action@v0.5.0
+      run: |
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # Destination branch to push changes
+        branch: gh-pages
+        # Use force push to fully overwrite the destination branch
+        force: true
